--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="lato-font container mx-auto">
 
   <header>
-    <div class="navbar   lg:bg-[#F85559] sm rounded-full">
+    <div class="navbar ----flex flex-row-reverse---   lg:bg-[#F85559] sm rounded-full">
       <div class="navbar-start">
         <div class="dropdown">
           <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -75,6 +75,7 @@
 
   </header>
   <main class="container mx-auto font-family">
+
     <!-- deal of the day section -->
     <div class="flex justify-between items-center flex-col lg:flex-row">
       <div>
@@ -113,11 +114,13 @@
 
       </div>
     </div>
+    <!-- card 1 -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-10">
-      <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+      <div class="card p-8 border">
         <figure><img src="/images/./fruit6.png" alt="Shoes" /></figure>
-        <div class="card-body justify-center space-y-6">
+        <div class="card-body  justify-center space-y-6">
           <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+          <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Apples</p>
           <div class="rating justify-center">
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -126,33 +129,15 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
-          <button class="text-center text-[#F85559] text-lg font-bold">Details</button>
-
-        </div>
-      </div>
-      <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-        <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
-        <div class="card-body justify-center space-y-6">
-          <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
-          <p class="text-gray-400 text-center">Orange</p>
-          <div class="rating justify-center">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-          </div>
-          <!-- Open the modal using ID.showModal() method -->
-          <button class="btn text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
-          <dialog id="my_modal_2" class="modal">
+          <!-- modal 1 -->
+          <button class="btn text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
+          <dialog id="my_modal_1" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
-
                 <div class="card-body">
-                  <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
+                  <figure><img src="/images/./fruit6.png" alt="Shoes" /></figure>
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
-
                     <div class="rating justify-center">
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -168,14 +153,54 @@
                 </div>
             </form>
           </dialog>
-
         </div>
       </div>
-
-      <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+      <!-- card 2 -->
+      <div class="card p-8 border">
+        <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
+        <div class="card-body justify-center space-y-6">
+          <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+          <hr class="border-b-2 border-gray-200">
+          <p class="text-gray-400 text-center">Orange</p>
+          <div class="rating justify-center">
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+          </div>
+          <!-- modal 2-->
+          <button class="btn text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
+          <dialog id="my_modal_2" class="modal">
+            <form method="dialog" class="modal-box">
+              <div class="card card-compact ">
+                <div class="card-body">
+                  <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
+                  <div class="card-body justify-center space-y-6">
+                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <div class="rating justify-center">
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <div class="card-actions justify-center">
+                      <button class="btn bor">Close</button>
+                      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+            </form>
+          </dialog>
+        </div>
+      </div>
+      <!-- card 3 -->
+      <div class="card p-8 border">
         <figure><img src="/images/./fruit8.png" alt="Shoes" /></figure>
         <div class="card-body justify-center space-y-6">
           <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+          <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Red DragonApples</p>
           <div class="rating justify-center">
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -184,16 +209,38 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
-          <button class="text-center text-[#F85559] text-lg font-bold">Details</button>
-
-
+          <!-- modal 3 -->
+          <button class="btn text-[#F85559]" onclick="my_modal_3.showModal()">Details</button>
+          <dialog id="my_modal_3" class="modal">
+            <form method="dialog" class="modal-box">
+              <div class="card card-compact ">
+                <div class="card-body">
+                  <figure><img src="/images/./fruit8.png" alt="Shoes" /></figure>
+                  <div class="card-body justify-center space-y-6">
+                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <div class="rating justify-center">
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <div class="card-actions justify-center">
+                      <button class="btn bor">Close</button>
+                      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
+            </form>
+          </dialog>
         </div>
       </div>
-      <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
-        <figure><img src="/images/./fruit9.png" alt="Shoes" /></figure>
+      <!-- card 4 -->
+      <div class="card p-8 border">
+        <figure><img src="/images/./fruit9.png" alt="" /></figure>
         <div class="card-body justify-center space-y-6">
-          <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
-          <hr class="">
+          <h2 class="text-2xl	font-extrabold text-center ">12.90$ - 18.85$</h2>
+          <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Banana</p>
           <div class="rating justify-center">
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -202,7 +249,29 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
-          <button class="text-center text-[#F85559] text-lg font-bold">Details</button>
+          <!-- modal 4 -->
+          <button class="btn text-[#F85559]" onclick="my_modal_4.showModal()">Details</button>
+          <dialog id="my_modal_4" class="modal">
+            <form method="dialog" class="modal-box">
+              <div class="card card-compact ">
+                <div class="card-body">
+                  <figure><img src="/images/./fruit9.png" alt="Shoes" /></figure>
+                  <div class="card-body justify-center space-y-6">
+                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <div class="card-actions justify-center">
+                    <button class="btn">Close</button>
+                    <button class="btn text-white bg-[#F85559]">Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </dialog>
         </div>
       </div>
     </div>
@@ -210,6 +279,23 @@
     <div class="flex justify-center mt-12">
       <button class=" bg-[#F85559] text-white px-6 py-5 rounded text-xl w-32 ">shop All</button>
     </div>
+
+    <!--Meet the team section  -->
+    <section class="mt-20 ">
+      <div class="hero min-h-screen" style="background-image: url(./images/team.png);">
+        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="">
+            <h1 class="mb-5 text-5xl font-extrabold">Meet the team section</h1>
+            <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+              <br>
+              Latin literature from 45 BC, making it over 2000 years old.
+            </p>
+
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 </body>
