--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                   <figure><img src="/images/./fruit9.png" alt="Shoes" /></figure>
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <div class="rating justify-center">
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
