team sectio added

--- a/index.html
+++ b/index.html
@@ -259,18 +259,18 @@
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                  </div>
-                  <div class="card-actions justify-center">
-                    <button class="btn">Close</button>
-                    <button class="btn text-white bg-[#F85559]">Buy Now</button>
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <div class="card-actions justify-center">
+                      <button class="btn">Close</button>
+                      <button class="btn text-white bg-[#F85559]">Buy Now</button>
+                    </div>
                   </div>
                 </div>
-              </div>
             </form>
           </dialog>
         </div>
@@ -292,9 +292,70 @@
               <br>
               Latin literature from 45 BC, making it over 2000 years old.
             </p>
+            <div class="grid grid-cols md:grid-cols-2 lg:grid-cols-4 gap-28 pt-11">
+              <div>
+                <div class="flex justify-center">
+                  <img src="./images/member1.png" alt="">
+                </div>
+                <div class="pt-7 space-y-3 text-center">
+                  <h3 class="text-2xl font-bold">Awlad Hossain</h3>
+                  <p>Fruits Expert</p>
+                  <div class="space-x-4">
+                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="flex justify-center">
+                  <img src="./images/member2.png" alt="">
+                </div>
+                <div class="pt-7 space-y-3 text-center">
+                  <h3 class="text-2xl font-bold">Safia Chowdhury</h3>
+                  <p>Fruits Expert</p>
+                  <div class="space-x-4">
+                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="flex justify-center">
+                  <img src="./images/member3.png" alt="">
+                </div>
+                <div class="pt-7 space-y-3 text-center">
+                  <h3 class="text-2xl font-bold">Rokib Hossain</h3>
+                  <p>Fruits Expert</p>
+                  <div class="space-x-4">
+                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="flex justify-center">
+                  <img src="./images/member4.png" alt="">
+                </div>
+                <div class="pt-7 space-y-3 text-center">
+                  <h3 class="text-2xl font-bold">Chaity</h3>
+                  <p>Fruits Expert</p>
+                  <div class="space-x-4">
+                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
 
           </div>
+
         </div>
+
       </div>
     </section>
 
