--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
   </style>
 
-<body class="lato-font container mx-auto">
+<body class="font-family container mx-auto">
 
   <header>
     <div class="navbar ----flex flex-row-reverse---   lg:bg-[#F85559] sm rounded-full">
@@ -119,7 +119,7 @@
       <div class="card p-8 border">
         <figure><img src="/images/./fruit6.png" alt="Shoes" /></figure>
         <div class="card-body  justify-center space-y-6">
-          <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+          <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Apples</p>
           <div class="rating justify-center">
@@ -130,14 +130,14 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 1 -->
-          <button class="btn text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
+          <button class="bg-transparent border-none font-medium text-[#F85559]" onclick="my_modal_1.showModal()">Details</button>
           <dialog id="my_modal_1" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
                   <figure><img src="/images/./fruit6.png" alt="Shoes" /></figure>
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -146,7 +146,7 @@
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
-                      <button class="btn bor">Close</button>
+                      <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
                       <button class="btn text-white bg-[#F85559]">Buy Now</button>
                     </div>
                   </div>
@@ -159,7 +159,7 @@
       <div class="card p-8 border">
         <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
         <div class="card-body justify-center space-y-6">
-          <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+          <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Orange</p>
           <div class="rating justify-center">
@@ -170,14 +170,14 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 2-->
-          <button class="btn text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
+          <button class="bg-transparent border-none font-medium text-[#F85559]" onclick="my_modal_2.showModal()">Details</button>
           <dialog id="my_modal_2" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
                   <figure><img src="/images/./fruit7.png" alt="Shoes" /></figure>
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -186,7 +186,7 @@
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
-                      <button class="btn bor">Close</button>
+                      <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
                       <button class="btn text-white bg-[#F85559]">Buy Now</button>
                     </div>
                   </div>
@@ -199,7 +199,7 @@
       <div class="card p-8 border">
         <figure><img src="/images/./fruit8.png" alt="Shoes" /></figure>
         <div class="card-body justify-center space-y-6">
-          <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+          <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Red DragonApples</p>
           <div class="rating justify-center">
@@ -210,14 +210,14 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 3 -->
-          <button class="btn text-[#F85559]" onclick="my_modal_3.showModal()">Details</button>
+          <button class="bg-transparent border-none font-medium text-[#F85559]" onclick="my_modal_3.showModal()">Details</button>
           <dialog id="my_modal_3" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
                   <figure><img src="/images/./fruit8.png" alt="Shoes" /></figure>
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -226,7 +226,7 @@
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
-                      <button class="btn bor">Close</button>
+                      <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
                       <button class="btn text-white bg-[#F85559]">Buy Now</button>
                     </div>
                   </div>
@@ -239,7 +239,7 @@
       <div class="card p-8 border">
         <figure><img src="/images/./fruit9.png" alt="" /></figure>
         <div class="card-body justify-center space-y-6">
-          <h2 class="text-2xl	font-extrabold text-center ">12.90$ - 18.85$</h2>
+          <h2 class="text-xl	font-extrabold text-center ">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
           <p class="text-gray-400 text-center">Banana</p>
           <div class="rating justify-center">
@@ -250,14 +250,14 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <!-- modal 4 -->
-          <button class="btn text-[#F85559]" onclick="my_modal_4.showModal()">Details</button>
+          <button class="bg-transparent border-none font-medium text-[#F85559]" onclick="my_modal_4.showModal()">Details</button>
           <dialog id="my_modal_4" class="modal">
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
                   <figure><img src="/images/./fruit9.png" alt="Shoes" /></figure>
                   <div class="card-body justify-center space-y-6">
-                    <h2 class="text-2xl	font-extrabold text-center">12.90$ - 18.85$</h2>
+                    <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -266,7 +266,7 @@
                       <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                     </div>
                     <div class="card-actions justify-center">
-                      <button class="btn">Close</button>
+                      <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
                       <button class="btn text-white bg-[#F85559]">Buy Now</button>
                     </div>
                   </div>
@@ -278,13 +278,13 @@
     </div>
     </div>
     <div class="flex justify-center mt-12">
-      <button class=" bg-[#F85559] text-white px-6 py-5 rounded text-xl w-32 ">shop All</button>
+      <button class=" bg-[#F85559] text-white rounded-xl px-6 py-5 rounded text-xl w-32 ">Shop All</button>
     </div>
 
     <!--Meet the team section  -->
     <section class="mt-20 ">
       <div class="hero min-h-screen" style="background-image: url(./images/team.png);">
-        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-overlay bg-opacity-70"></div>
         <div class="hero-content text-center text-neutral-content">
           <div class="">
             <h1 class="mb-5 text-5xl font-extrabold">Meet the team section</h1>
@@ -357,6 +357,13 @@
         </div>
 
       </div>
+    </section>
+
+
+    <!-- Why Choose Us -->
+    <section class="mt-32 ">
+      <h2 class="text-5xl font-extralight">Why Choose Us</h2>
+      <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
     </section>
 
   </main>
