--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <div class="flex justify-between items-center flex-col lg:flex-row">
       <div class="">
         <h3 class="text-2xl text-center lg:text-start lg:text-5xl  mb-6 font-extrabold">Deal of the day</h3>
-        <p class="font-bold text-center lg:text-start"> Contrary to popular belief, is not simply random text. It has roots in a piece of
+        <p class="font-bold text-center lg:text-start"> Contrary to popular belief, is not simply random text. It has
+          roots in a piece of
           classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
       </div>
       <div class="flex gap-8">
@@ -365,16 +366,93 @@
         classical <br>
         Latin literature from 45 BC, making it over 2000 years old.</p>
 
-      <div>
-        <div>
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 mt-10">
+        <!-- first part -->
+        <div class="space-y-10">
+          <div class="flex items-center gap-6">
+            <div class="bg-gray-300 px-4 py-3  rounded-full text-black">
+              <i class="fa fa-solid fa-users"></i>
+            </div>
+            <div>
+              <h3 class="text-2xl font-extrabold">Dedicated Team</h3>
+              <hr class="border-b-2 border-gray-200 w-28 mt-4">
+              <p class="font-medium text-[#121212] mt-4">Professional employees are there for you to pick the most
+                amazing and fresh fruits.</p>
 
+            </div>
+
+          </div>
+          <div class="flex items-center gap-6">
+            <div class="bg-gray-300  px-4 py-3 rounded-full text-black">
+              <i class="fa fa-regular fa-heart"></i>
+            </div>
+            <div>
+              <h3 class="text-2xl font-extrabold">Fresh is Best</h3>
+              <hr class="border-b-2 border-gray-200 w-28 mt-4">
+              <p class="font-medium text-[#121212] mt-4">Professional employees are there for you to pick the most
+                amazing and fresh fruits.</p>
+
+            </div>
+
+          </div>
+          <div class="flex items-center gap-6">
+            <div class="bg-gray-300 px-4 py-3 rounded-full text-black">
+              <i class="fa fa-solid fa-gift"></i>
+            </div>
+            <div>
+              <h3 class="text-2xl font-extrabold">Gift Certificates</h3>
+              <hr class="border-b-2 border-gray-200 w-28 mt-4">
+              <p class="font-medium text-[#121212] mt-4">Professional employees are there for you to pick the most
+                amazing and fresh fruits.</p>
+
+            </div>
+
+          </div>
         </div>
-        <div>
-          <h3>Dedicated Team</h3>
-          <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
 
+        <!-- second part -->
+        <div class="">
+          <div class="col-span-3">
+            <img class="h-[424px]" src="./images/whychoose1.png" alt="">
+          </div>
         </div>
-
+        <!-- third part  -->
+        <div class="space-y-10">
+          <div class="flex items-center gap-6">
+            <div class="text-right">
+              <h3 class="text-2xl font-extrabold">Integrated Supplier</h3>
+              <hr class="border-b-2 ml-60 border-gray-200 w-28 mt-4 ">
+              <p class="font-medium text-[#121212] mt-4">Professional employees are there for you to pick the most
+                amazing and fresh fruits.</p>
+            </div>
+            <div class="bg-gray-300 px-4 py-3 rounded-full text-black">
+              <i class="fa-solid fa-users"></i>
+            </div>
+          </div>
+          <div class="flex items-center gap-6">
+            <div class="text-right">
+              <h3 class="text-2xl font-extrabold">Sustainable Practice</h3>
+              <hr class="border-b-2 ml-60 border-gray-200 w-28 mt-4 ">
+              <p class="font-medium text-[#121212] mt-4">Professional employees are there for you to pick the most
+                amazing and fresh fruits.</p>
+            </div>
+            <div class="bg-gray-300 px-4 py-3 rounded-full text-black">
+              <i class="fa fa-solid fa-ice-cream"></i>
+            </div>
+          </div>
+          <div class="flex items-center gap-6">
+            <div class="text-right">
+              <h3 class="text-2xl font-extrabold">The Benefits Only</h3>
+              <hr class="border-b-2 ml-60 border-gray-200 w-28 mt-4 ">
+              <p class="font-medium text-[#121212] mt-4">Professional employees are there for you to pick the most
+                amazing and fresh fruits.</p>
+            </div>
+            <div class="bg-gray-300 px-4 py-3 rounded-full text-black">
+              <i class="fa fa-solid fa-thumbs-up"></i>
+            </div>
+          </div>
+         
+        </div>
       </div>
     </section>
 
