footer section add

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     }
   </style>
 
-<body class="font-family container mx-auto">
+<body>
 
-  <header>
+  <header class="font-family container mx-auto">
     <!-- navbar section -->
     <div class="navbar mt-10 lg:bg-[#F85559] sm rounded-full">
       <div class="navbar-start hidden lg:flex">
@@ -70,6 +70,8 @@
     <!--  -->
 
   </header>
+
+  <!-- main section -->
   <main class="container mx-auto font-family">
 
     <!-- deal of the day section -->
@@ -457,6 +459,33 @@
     </section>
 
   </main>
+
+  <!-- footer section -->
+  <footer class="footer mt-32 footer-center pt-24 pb-24 w-full bg-black">
+    <div class=" items-center flex gap-4">
+      <img src="./images/logo.png" alt="">
+      <h3 class="text-3xl  font-bold text-white lg:text-white">Fruit Burst</h3>
+    </div>
+    <div class="grid grid-flow-col font-bold text-white gap-4">
+      <a class="link link-hover">Home</a> 
+      <a class="link link-hover">About Us</a> 
+      <a class="link link-hover">Shop</a> 
+      <a class="link link-hover">All Fruits</a>
+      <a class="link link-hover">Support</a>
+      <a class="link link-hover">My Account</a>
+    </div> 
+    <div>
+      <div class="grid grid-flow-col text-2xl  text-white gap-8">
+        <a><i class="fa-brands fa fa-twitter"></i></a> 
+        <a><i class="fa-brands fa fa-facebook-f"></i></a> 
+        <a><i class="fa-brands fa fa-youtube"></i></a>
+        <a><i class="fa-brands fa fa-linkedin"></i></a>
+        <a><i class="fa-brands fa fa-instagram"></i></a>
+        <a><i class="fa-brands fa fa-apple"></i></a>
+      </div>
+    </div> 
+   
+  </footer>
 </body>
 
 </html>
