--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
       <!-- card 4 -->
       <div class="card p-8 border">
-        <figure><img src="/images/./fruit9.png" alt="" /></figure>
+        <img src="/images/./fruit9.png" alt="" />
         <div class="card-body justify-center space-y-6">
           <h2 class="text-xl	font-extrabold text-center ">12.90$ - 18.85$</h2>
           <hr class="border-b-2 border-gray-200">
@@ -256,7 +256,7 @@
             <form method="dialog" class="modal-box">
               <div class="card card-compact ">
                 <div class="card-body">
-                  <figure><img src="/images/./fruit9.png" alt="Shoes" /></figure>
+                  <img src="/images/./fruit9.png" alt="" />
                   <div class="card-body justify-center space-y-6">
                     <h2 class="text-xl	font-extrabold text-center">12.90$ - 18.85$</h2>
                     <div class="rating justify-center">
